test/files/invalid/required_for_simple.fbs
table Foo {
  x: uint8 (required);
}