test/files/invalid/required_for_simple.stderr
[0m[1m[38;5;9merror[0m[1m: Unsupported required attribute[0m
  [0m[34m┌─[0m test/files/invalid/required_for_simple.fbs:2:13
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   x: uint8 ([0m[31mrequired[0m);
  [0m[34m│[0m      [0m[34m-----[0m  [0m[31m^^^^^^^^[0m [0m[31mrequired attribute was here[0m
  [0m[34m│[0m      [0m[34m│[0m       
  [0m[34m│[0m      [0m[34monly non-scalar types support the 'required' attribute[0m

Error: Bailing because of errors
